@@ -14,27 +14,6 @@
 
 package org.odk.collect.android.tasks;
 
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.protocol.HttpContext;
-import org.javarosa.xform.parse.XFormParser;
-import org.kxml2.kdom.Element;
-import org.odk.collect.android.R;
-import org.odk.collect.android.application.Collect;
-import org.odk.collect.android.listeners.FormDownloaderListener;
-import org.odk.collect.android.logic.FormDetails;
-import org.odk.collect.android.provider.FormsProviderAPI.FormsColumns;
-import org.odk.collect.android.utilities.DocumentFetchResult;
-import org.odk.collect.android.utilities.FileUtils;
-import org.odk.collect.android.utilities.WebUtils;
-
-import android.content.ContentValues;
-import android.database.Cursor;
-import android.net.Uri;
-import android.os.AsyncTask;
-import android.util.Log;
-
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
@@ -48,6 +27,28 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
+import org.javarosa.xform.parse.XFormParser;
+import org.kxml2.kdom.Element;
+import org.odk.collect.android.R;
+import org.odk.collect.android.application.Collect;
+import org.odk.collect.android.listeners.FormDownloaderListener;
+import org.odk.collect.android.logic.FormDetails;
+import org.odk.collect.android.provider.FormsProviderAPI.FormsColumns;
+import org.odk.collect.android.utilities.DocumentFetchResult;
+import org.odk.collect.android.utilities.FileUtils;
+import org.odk.collect.android.utilities.WebUtils;
+import org.opendatakit.httpclientandroidlib.HttpResponse;
+import org.opendatakit.httpclientandroidlib.HttpStatus;
+import org.opendatakit.httpclientandroidlib.client.HttpClient;
+import org.opendatakit.httpclientandroidlib.client.methods.HttpGet;
+import org.opendatakit.httpclientandroidlib.protocol.HttpContext;
+
+import android.content.ContentValues;
+import android.database.Cursor;
+import android.net.Uri;
+import android.os.AsyncTask;
+import android.util.Log;
+
 /**
  * Background task for downloading a given list of forms. We assume right now that the forms are
  * coming from the same server that presented the form list, but theoretically that won't always be
@@ -57,9 +58,9 @@ import java.util.List;
  * @author carlhartung
  */
 public class DownloadFormsTask extends
-        AsyncTask<ArrayList<FormDetails>, String, HashMap<String, String>> {
+        AsyncTask<ArrayList<FormDetails>, String, HashMap<FormDetails, String>> {
 
-    private static final String t = "DownlaodFormsTask";
+    private static final String t = "DownloadFormsTask";
 
     private static final String MD5_COLON_PREFIX = "md5:";
 
@@ -68,20 +69,20 @@ public class DownloadFormsTask extends
     private static final String NAMESPACE_OPENROSA_ORG_XFORMS_XFORMS_MANIFEST =
         "http://openrosa.org/xforms/xformsManifest";
 
-
     private boolean isXformsManifestNamespacedElement(Element e) {
         return e.getNamespace().equalsIgnoreCase(NAMESPACE_OPENROSA_ORG_XFORMS_XFORMS_MANIFEST);
     }
 
 
     @Override
-    protected HashMap<String, String> doInBackground(ArrayList<FormDetails>... values) {
+    protected HashMap<FormDetails, String> doInBackground(ArrayList<FormDetails>... values) {
         ArrayList<FormDetails> toDownload = values[0];
 
         int total = toDownload.size();
         int count = 1;
+    	Collect.getInstance().getActivityLogger().logAction(this, "downloadForms", String.valueOf(total));
 
-        HashMap<String, String> result = new HashMap<String, String>();
+        HashMap<FormDetails, String> result = new HashMap<FormDetails, String>();
 
         for (int i = 0; i < total; i++) {
             FormDetails fd = toDownload.get(i);
@@ -95,60 +96,77 @@ public class DownloadFormsTask extends
                 // if we've downloaded a duplicate, this gives us the file
                 File dl = downloadXform(fd.formName, fd.downloadUrl);
 
-                String[] projection = {
-                        FormsColumns._ID, FormsColumns.FORM_FILE_PATH
-                };
-                String[] selectionArgs = {
-                    dl.getAbsolutePath()
-                };
-                String selection = FormsColumns.FORM_FILE_PATH + "=?";
-                Cursor alreadyExists =
-                    Collect.getInstance()
+                Cursor alreadyExists = null;
+                Uri uri = null;
+                try {
+                    String[] projection = {
+                            FormsColumns._ID, FormsColumns.FORM_FILE_PATH
+                    };
+                    String[] selectionArgs = {
+                        dl.getAbsolutePath()
+                    };
+                    String selection = FormsColumns.FORM_FILE_PATH + "=?";
+                    alreadyExists = Collect.getInstance()
                             .getContentResolver()
                             .query(FormsColumns.CONTENT_URI, projection, selection, selectionArgs,
                                 null);
+	
+	                if (alreadyExists.getCount() <= 0) {
+	                    // doesn't exist, so insert it
+	                    ContentValues v = new ContentValues();
+	                    v.put(FormsColumns.FORM_FILE_PATH, dl.getAbsolutePath());
+	
+	                    HashMap<String, String> formInfo = FileUtils.parseXML(dl);
+	                    v.put(FormsColumns.DISPLAY_NAME, formInfo.get(FileUtils.TITLE));
+	                    v.put(FormsColumns.JR_VERSION, formInfo.get(FileUtils.VERSION));
+	                    v.put(FormsColumns.JR_FORM_ID, formInfo.get(FileUtils.FORMID));
+	                    v.put(FormsColumns.SUBMISSION_URI, formInfo.get(FileUtils.SUBMISSIONURI));
+	                    v.put(FormsColumns.BASE64_RSA_PUBLIC_KEY, formInfo.get(FileUtils.BASE64_RSA_PUBLIC_KEY));
+	                    uri =
+	                        Collect.getInstance().getContentResolver()
+	                                .insert(FormsColumns.CONTENT_URI, v);
+	                	Collect.getInstance().getActivityLogger().logAction(this, "insert", dl.getAbsolutePath());
 
-                Uri uri = null;
-                if (alreadyExists.getCount() <= 0) {
-                    // doesn't exist, so insert it
-                    ContentValues v = new ContentValues();
-                    v.put(FormsColumns.FORM_FILE_PATH, dl.getAbsolutePath());
-
-                    HashMap<String, String> formInfo = FileUtils.parseXML(dl);
-                    v.put(FormsColumns.DISPLAY_NAME, formInfo.get(FileUtils.TITLE));
-                    v.put(FormsColumns.MODEL_VERSION, formInfo.get(FileUtils.MODEL));
-                    v.put(FormsColumns.UI_VERSION, formInfo.get(FileUtils.UI));
-                    v.put(FormsColumns.JR_FORM_ID, formInfo.get(FileUtils.FORMID));
-                    v.put(FormsColumns.SUBMISSION_URI, formInfo.get(FileUtils.SUBMISSIONURI));
-                    uri =
-                        Collect.getInstance().getContentResolver()
-                                .insert(FormsColumns.CONTENT_URI, v);
-                } else {
-                    alreadyExists.moveToFirst();
-                    uri =
-                        Uri.withAppendedPath(FormsColumns.CONTENT_URI,
-                            alreadyExists.getString(alreadyExists.getColumnIndex(FormsColumns._ID)));
+	                } else {
+	                    alreadyExists.moveToFirst();
+	                    uri =
+	                        Uri.withAppendedPath(FormsColumns.CONTENT_URI,
+	                            alreadyExists.getString(alreadyExists.getColumnIndex(FormsColumns._ID)));
+	                	Collect.getInstance().getActivityLogger().logAction(this, "refresh", dl.getAbsolutePath());
+	                }
+                } finally {
+                	if ( alreadyExists != null ) {
+                		alreadyExists.close();
+                	}
                 }
 
                 if (fd.manifestUrl != null) {
-                    Cursor c =
-                        Collect.getInstance().getContentResolver()
+                	String formMediaPath = null;
+                	Cursor c = null;
+                	try {
+                		c = Collect.getInstance().getContentResolver()
                                 .query(uri, null, null, null, null);
-                    if (c.getCount() > 0) {
-                        // should be exactly 1
-                        c.moveToFirst();
-
+	                    if (c.getCount() > 0) {
+	                        // should be exactly 1
+	                        c.moveToFirst();
+	                        formMediaPath = c.getString(c.getColumnIndex(FormsColumns.FORM_MEDIA_PATH));
+	                    }
+                	} finally {
+                		if ( c != null ) {
+                			c.close();
+                		}
+                	}
+                	
+                	if ( formMediaPath != null ) {
                         String error =
-                            downloadManifestAndMediaFiles(
-                                c.getString(c.getColumnIndex(FormsColumns.FORM_MEDIA_PATH)), fd,
+                            downloadManifestAndMediaFiles(formMediaPath, fd,
                                 count, total);
                         if (error != null) {
                             message += error;
                         }
                     }
                 } else {
-                    // TODO: manifest was null?
-                    Log.e(t, "Manifest was null.  PANIC");
+                    Log.i(t, "No Manifest for: " + fd.formName);
                 }
             } catch (SocketTimeoutException se) {
                 se.printStackTrace();
@@ -157,13 +175,15 @@ public class DownloadFormsTask extends
                 e.printStackTrace();
                 if (e.getCause() != null) {
                     message += e.getCause().getMessage();
+                } else {
+                    message += e.getMessage();
                 }
             }
             count++;
             if (message.equalsIgnoreCase("")) {
                 message = Collect.getInstance().getString(R.string.success);
             }
-            result.put(fd.formName, message);
+            result.put(fd, message);
         }
 
         return result;
@@ -188,11 +208,11 @@ public class DownloadFormsTask extends
         rootName = rootName.trim();
 
         // proposed name of xml file...
-        String path = Collect.FORMS_PATH + "/" + rootName + ".xml";
+        String path = Collect.FORMS_PATH + File.separator + rootName + ".xml";
         int i = 2;
         f = new File(path);
         while (f.exists()) {
-            path = Collect.FORMS_PATH + "/" + rootName + "_" + i + ".xml";
+            path = Collect.FORMS_PATH + File.separator + rootName + "_" + i + ".xml";
             f = new File(path);
             i++;
         }
@@ -209,20 +229,25 @@ public class DownloadFormsTask extends
         };
         String selection = FormsColumns.MD5_HASH + "=?";
 
-        Cursor c =
-            Collect.getInstance().getContentResolver()
+        Cursor c = null;
+        try {
+        	c = Collect.getInstance().getContentResolver()
                     .query(FormsColumns.CONTENT_URI, projection, selection, selectionArgs, null);
-        if (c.getCount() > 0) {
-            // Should be at most, 1
-            c.moveToFirst();
-
-            // delete the file we just downloaded, because it's a duplicate
-            f.delete();
-
-            // set the file returned to the file we already had
-            f = new File(c.getString(c.getColumnIndex(FormsColumns.FORM_FILE_PATH)));
+	        if (c.getCount() > 0) {
+	            // Should be at most, 1
+	            c.moveToFirst();
+	
+	            // delete the file we just downloaded, because it's a duplicate
+	            f.delete();
+	
+	            // set the file returned to the file we already had
+	            f = new File(c.getString(c.getColumnIndex(FormsColumns.FORM_FILE_PATH)));
+	        }
+        } finally {
+        	if ( c != null ) {
+        		c.close();
+        	}
         }
-        c.close();
 
         return f;
     }
@@ -239,6 +264,7 @@ public class DownloadFormsTask extends
     private void downloadFile(File f, String downloadUrl) throws Exception {
         URI uri = null;
         try {
+            // assume the downloadUrl is escaped properly
             URL url = new URL(downloadUrl);
             uri = url.toURI();
         } catch (MalformedURLException e) {
@@ -249,58 +275,84 @@ public class DownloadFormsTask extends
             throw e;
         }
 
-        // get shared HttpContext so that authentication and cookies are retained.
-        HttpContext localContext = Collect.getInstance().getHttpContext();
-
-        HttpClient httpclient = WebUtils.createHttpClient(WebUtils.CONNECTION_TIMEOUT);
-
-        // set up request...
-        HttpGet req = WebUtils.createOpenRosaHttpGet(uri);
-
-        HttpResponse response = null;
-        try {
-            response = httpclient.execute(req, localContext);
-            int statusCode = response.getStatusLine().getStatusCode();
-
-            if (statusCode != 200) {
-                String errMsg =
-                    Collect.getInstance()
-                            .getString(R.string.file_fetch_failed, downloadUrl,
-                                response.getStatusLine().getReasonPhrase(), statusCode);
-                Log.e(t, errMsg);
-                throw new Exception(errMsg);
-            }
-
-            // write connection to file
-            InputStream is = null;
-            OutputStream os = null;
-            try {
-                is = response.getEntity().getContent();
-                os = new FileOutputStream(f);
-                byte buf[] = new byte[1024];
-                int len;
-                while ((len = is.read(buf)) > 0) {
-                    os.write(buf, 0, len);
-                }
-                os.flush();
-            } finally {
-                if (os != null) {
-                    try {
-                        os.close();
-                    } catch (Exception e) {
-                    }
-                }
-                if (is != null) {
-                    try {
-                        is.close();
-                    } catch (Exception e) {
-                    }
-                }
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            throw e;
+        // WiFi network connections can be renegotiated during a large form download sequence.
+        // This will cause intermittent download failures.  Silently retry once after each 
+        // failure.  Only if there are two consecutive failures, do we abort.
+        boolean success = false;
+        int attemptCount = 0;
+        final int MAX_ATTEMPT_COUNT = 2;
+        while ( !success && ++attemptCount <= MAX_ATTEMPT_COUNT ) {
+	        // get shared HttpContext so that authentication and cookies are retained.
+	        HttpContext localContext = Collect.getInstance().getHttpContext();
+	
+	        HttpClient httpclient = WebUtils.createHttpClient(WebUtils.CONNECTION_TIMEOUT);
+	
+	        // set up request...
+	        HttpGet req = WebUtils.createOpenRosaHttpGet(uri);
+	
+	        HttpResponse response = null;
+	        try {
+	            response = httpclient.execute(req, localContext);
+	            int statusCode = response.getStatusLine().getStatusCode();
+	
+	            if (statusCode != HttpStatus.SC_OK) {
+	            	WebUtils.discardEntityBytes(response);
+	            	if (statusCode == HttpStatus.SC_UNAUTHORIZED) {
+	            		// clear the cookies -- should not be necessary?
+	            		Collect.getInstance().getCookieStore().clear();
+	            	}
+	                String errMsg =
+	                    Collect.getInstance().getString(R.string.file_fetch_failed, downloadUrl,
+	                        response.getStatusLine().getReasonPhrase(), statusCode);
+	                Log.e(t, errMsg);
+	                throw new Exception(errMsg);
+	            }
+	
+	            // write connection to file
+	            InputStream is = null;
+	            OutputStream os = null;
+	            try {
+	                is = response.getEntity().getContent();
+	                os = new FileOutputStream(f);
+	                byte buf[] = new byte[1024];
+	                int len;
+	                while ((len = is.read(buf)) > 0) {
+	                    os.write(buf, 0, len);
+	                }
+	                os.flush();
+	                success = true;
+	            } finally {
+	                if (os != null) {
+	                    try {
+	                        os.close();
+	                    } catch (Exception e) {
+	                    }
+	                }
+	                if (is != null) {
+	                	try {
+	                		// ensure stream is consumed...
+	                        final long count = 1024L;
+	                        while (is.skip(count) == count)
+	                            ;
+	                	} catch (Exception e) {
+	                		// no-op
+	                	}
+	                    try {
+	                        is.close();
+	                    } catch (Exception e) {
+	                    }
+	                }
+	            }
+	
+	        } catch (Exception e) {
+	        	Log.e(t, e.toString());
+	            e.printStackTrace();
+	            // silently retry unless this is the last attempt, 
+	            // in which case we rethrow the exception.
+	            if ( attemptCount == MAX_ATTEMPT_COUNT ) {
+	            	throw e;
+	            }
+	        }
         }
     }
 
@@ -437,12 +489,12 @@ public class DownloadFormsTask extends
                 try {
                     File mediaFile = new File(mediaDir, toDownload.filename);
 
-                    String currentFileHash = FileUtils.getMd5Hash(mediaFile);
-                    String downloadFileHash = toDownload.hash.substring(MD5_COLON_PREFIX.length());
-
                     if (!mediaFile.exists()) {
                         downloadFile(mediaFile, toDownload.downloadUrl);
                     } else {
+                        String currentFileHash = FileUtils.getMd5Hash(mediaFile);
+                        String downloadFileHash = toDownload.hash.substring(MD5_COLON_PREFIX.length());
+
                         if (!currentFileHash.contentEquals(downloadFileHash)) {
                             // if the hashes match, it's the same file
                             // otherwise delete our current one and replace it with the new one
@@ -451,6 +503,7 @@ public class DownloadFormsTask extends
                         } else {
                             // exists, and the hash is the same
                             // no need to download it again
+                        	Log.i(t, "Skipping media file fetch -- file hashes identical: " + mediaFile.getAbsolutePath());
                         }
                     }
                 } catch (Exception e) {
@@ -463,7 +516,7 @@ public class DownloadFormsTask extends
 
 
     @Override
-    protected void onPostExecute(HashMap<String, String> value) {
+    protected void onPostExecute(HashMap<FormDetails, String> value) {
         synchronized (this) {
             if (mStateListener != null) {
                 mStateListener.formsDownloadingComplete(value);
@@ -477,8 +530,9 @@ public class DownloadFormsTask extends
         synchronized (this) {
             if (mStateListener != null) {
                 // update progress and total
-                mStateListener.progressUpdate(values[0], new Integer(values[1]).intValue(),
-                    new Integer(values[2]).intValue());
+                mStateListener.progressUpdate(values[0], 
+                	Integer.valueOf(values[1]),
+                    Integer.valueOf(values[2]));
             }
         }
 
